tests/errors/init_state/error_span/structured_use_before_init_at_stmt_span.err.expected
error: at 6:17: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'z' is used before initialization
   |
 6 |                 x = copy z;
   |                 ^^^^^^^^^^
